group 'solid.humank'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

configurations {
    // configuration that holds jars to include in the jar
    extraLibs
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
        if (JavaVersion.current() == JavaVersion.VERSION_1_9) {
            options.compilerArgs << "--add-modules=java.activation,java.xml.ws.annotation"
        }

    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.235'
    extraLibs group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
    extraLibs group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.2'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
    compile 'com.amazonaws:aws-lambda-java-core:1.1.0'
    compile 'com.amazonaws:aws-lambda-java-events:2.0.1'
    compile 'com.amazonaws:aws-lambda-java-log4j:1.0.0'
    compile 'com.amazonaws:aws-lambda-java-log4j2:1.0.0'
    compile 'joda-time:joda-time:2.9.9'
    //compile 'org.projectlombok:lombok:1.16.18'
}

jar {
    from(configurations.runtime) {
        into 'lib'
        exclude('*aws*.jar')
    }
}

task update(type:Exec){
    workingDir '.'
    commandLine 'scripts/updateLambdaFunc.sh'
    ignoreExitValue true
}

task deploy(type:Exec){
    workingDir '.'
    commandLine 'scripts/deployLambdaFunc.sh'
    ignoreExitValue true
}